# SnipeITAPI

./: README.md  setup.cfg
SnipeITAPI/: Exceptions.py  Sessions.py  __init__.py
