[metadata]
version = attr: SnipeITAPI.__version__
name = SnipeITAPI
description = Structured way to interface with Snipe-IT API
url = https://github.com/Razmo99/SnipeITAPI
author = razmo99
author_email = lewis.munro@live.com
keywords = Snipe-IT, API, SnipeITAPI, snipeit
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_file = LICENSE
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = SnipeIT
install_requires=
    requests>=2.24.0
    urllib3>=1.25.10
python_requires = ~=3.8